--- a/prologin/users/templates/users/mails/activation.body.text.html
+++ b/prologin/users/templates/users/mails/activation.body.text.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load utils %}
 
-{% get_setting_var 'PROLOGIN_CONTACT_MAIL' as contactmail %}
+{% get_setting 'PROLOGIN_CONTACT_MAIL' as contactmail %}
 {% spaceless %}{% autoescape off %}
 {% blocktrans with user.username as username %}
 Hi {{ username }}!
