--- a/prologin/documents/templates/documents/index.html
+++ b/prologin/documents/templates/documents/index.html
@@ -120,6 +120,9 @@
               <a href="{% url 'documents:final:planning' year %}" class="btn btn-default btn-xs">
                 <i class="fa fa-calendar"></i> {% trans "Planning" %}
               </a>
+              <a href="{% url 'documents:final:external-organizers' year %}" class="btn btn-default btn-xs">
+                <i class="fa fa-hand-paper-o"></i> {% trans "External organizers" %}
+              </a>
             </td>
           </tr>
         </tbody>
