mailing: errata for final convocations

--- a/prologin/mailing/templates/mailing/final_qualified.body.text.html
+++ b/prologin/mailing/templates/mailing/final_qualified.body.text.html
@@ -10,7 +10,7 @@ donc rendez-vous le samedi 14 mai à 9 h à l'adresse suivante :
                        94270 Le Kremlin-Bicêtre
 
 Ceux qui le souhaitent peuvent passer la nuit du vendredi à l'école.
-Les organisateurs Prologin assureront l'accueil à partir de 17 h et
+Les organisateurs Prologin assureront l'accueil à partir de 18 h et
 proposeront entre autres des formations GNU/Linux pendant la soirée.
 Le concours, d'une durée de 36 heures, prendra fin avec le banquet du
 lundi 15 mai à midi. Vous serez donc libre à partir de 15 h.
@@ -27,12 +27,16 @@ gauche pour rejoindre la rue Pasteur peu après le Boulevard
 Périphérique.
 
 Tu recevras prochainement une convocation par courrier, ainsi que
-divers formulaires à remplir. Tu devras les présenter remplis et
-signés le jour de ton arrivée, sans quoi nous ne pourrons vous
-accepter. Au cas où ces documents ne te parviendraient pas par voie
-postale, ils te sont fournis en pièce jointe afin que tu puisses
-les imprimer par tes propres soins. Voici une liste exhaustive des
-formulaires nécessaires :
+divers formulaires à remplir. ATTENTION, la date indiquée sur la
+convocation papier est erronée ! Le début du concours aura bien lieu
+samedi matin et non vendredi matin, l'accueil se faisant le vendredi
+soir pour ceux qui le désirent.
+
+Tu devras présenter ces documents remplis et signés le jour de ton
+arrivée, sans quoi nous ne pourrons t'accepter. Au cas où ils ne
+te parviendraient pas par voie postale, Tu pourras les trouver sur
+la page d'accueil du site prologin.org et les imprimer. Voici une
+liste exhaustive des formulaires nécessaires :
 
 * convocation,
 * autorisation de diffusion d'image,
