mailing: The planning is no longer sent with the mailing

--- a/prologin/mailing/templates/mailing/final_qualified.body.text.html
+++ b/prologin/mailing/templates/mailing/final_qualified.body.text.html
@@ -16,8 +16,7 @@ Le concours, d'une durée de 36 heures, prendra fin avec le banquet du
 lundi 15 mai à midi. Vous serez donc libre à partir de 15 h.
 
 Durant toute la durée du concours, nous prendrons en charge les repas
-et le logement. Un planning plus détaillé des activités est fourni en
-pièce jointe.
+et le logement.
 
 Tu peux trouver ici une carte pour l'accès aux locaux.
 https://goo.gl/maps/VARWAivyM272
@@ -35,7 +34,8 @@ soir pour ceux qui le désirent.
 Tu devras présenter ces documents remplis et signés le jour de ton
 arrivée, sans quoi nous ne pourrons t'accepter. Au cas où ils ne
 te parviendraient pas par voie postale, Tu pourras les trouver sur
-la page d'accueil du site prologin.org et les imprimer. Voici une
+la page d'accueil du site prologin.org et les imprimer. Ces documents
+sont accompagnés d'un planning détaillé des activités. Voici une
 liste exhaustive des formulaires nécessaires :
 
 * convocation,
