mailing: add missing https in url

--- a/prologin/mailing/templates/mailing/final_qualified.body.text.html
+++ b/prologin/mailing/templates/mailing/final_qualified.body.text.html
@@ -34,7 +34,7 @@ soir pour ceux qui le désirent.
 Tu devras présenter ces documents remplis et signés le jour de ton
 arrivée, sans quoi nous ne pourrons t'accepter. Au cas où ils ne
 te parviendraient pas par voie postale, Tu pourras les trouver sur
-la page d'accueil du site prologin.org et les imprimer. Ces documents
+la page d'accueil du site https://prologin.org et les imprimer. Ces documents
 sont accompagnés d'un planning détaillé des activités. Voici une
 liste exhaustive des formulaires nécessaires :
 
