mailing: Mention the incoming corrected convocation

--- a/prologin/mailing/templates/mailing/final_qualified.body.text.html
+++ b/prologin/mailing/templates/mailing/final_qualified.body.text.html
@@ -29,7 +29,8 @@ Tu recevras prochainement une convocation par courrier, ainsi que
 divers formulaires à remplir. ATTENTION, la date indiquée sur la
 convocation papier est erronée ! Le début du concours aura bien lieu
 samedi matin et non vendredi matin, l'accueil se faisant le vendredi
-soir pour ceux qui le désirent.
+soir pour ceux qui le désirent. Vous allez recevoir par courrier une
+nouvelle convocation contenant les dates et horaires corrigés.
 
 Tu devras présenter ces documents remplis et signés le jour de ton
 arrivée, sans quoi nous ne pourrons t'accepter. Au cas où ils ne
