documents: add badges templates

--- a/prologin/documents/templates/documents/index.html
+++ b/prologin/documents/templates/documents/index.html
@@ -126,6 +126,9 @@
               <a href="{% url 'documents:final:diplomas' year %}" class="btn btn-default btn-xs">
                 <i class="fa fa-trophy"></i> {% trans "Diplomas" %}
               </a>
+              <a href="{% url 'documents:final:badges' year %}" class="btn btn-default btn-xs">
+                <i class="fa fa-ticket"></i> {% trans "Badges" %}
+              </a>
             </td>
           </tr>
         </tbody>
