marauder: implement ping endpoints using GCM

--- a/prologin/marauder/templates/marauder/index.html
+++ b/prologin/marauder/templates/marauder/index.html
@@ -24,8 +24,8 @@
     <ion-popover-view>
       <ion-content>
         <div class="list">
-          <a class="item" href="#" ng-click="$event.stopPropagation();">
-            TODO
+          <a class="item" href="#" ng-click="reloadApp()">
+            <i class="material-icons">autorenew</i> Recharger
           </a>
         </div>
       </ion-content>
