--- a/prologin/marauder/templates/marauder/index.html
+++ b/prologin/marauder/templates/marauder/index.html
@@ -9,16 +9,33 @@
     <img src="{% static 'marauder/logo.svg' %}"/>
     <h1 class="title">Prologin {{ event.edition.year }} – {{ event.center.name }}</h1>
     <div class="buttons">
-      <button class="button button-icon ion-more" ng-click="popover.show($event)"></button>
+      <button class="button button-icon" ng-click="$root.popover.show($event)"><i class="material-icons">more_horiz</i>
+      </button>
     </div>
   </ion-header-bar>
 
-  <ion-content>
-    <ion-refresher on-refresh="doRefresh()"></ion-refresher>
+  <ion-nav-view></ion-nav-view>
 
-    {% include "marauder/page/taskforces.html" %}
+  <script id="templates/tabs.html" type="text/ng-template">
+    <ion-tabs class="tabs-icon-top tabs-positive">
 
-  </ion-content>
+      <ion-tab title="Task forces" href="#/tab/taskforces">
+        <ion-nav-view name="taskforces-tab"></ion-nav-view>
+      </ion-tab>
+
+      <ion-tab title="Map" href="#/tab/map">
+        <ion-nav-view name="map-tab"></ion-nav-view>
+      </ion-tab>
+
+    </ion-tabs>
+  </script>
+
+  {% comment %}<div class="bar bar-footer">
+    <button class="button button-clear pull-right"><i class="material-icons">map</i></button>
+  </div>{% endcomment %}
+
+  {% include "marauder/page/taskforces.html" %}
+  {% include "marauder/page/map.html" %}
 
   <script id="templates/popover.html" type="text/ng-template">
     <ion-popover-view>
